k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toggles
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: toggle-server
          ports:
            - name: http
              containerPort: 8080
          image: gcr.io/featflags-369-superseed/toggles
