k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports: 
  - port: 80
    targetPort: 8080
  selector:
    app: server
