k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expose-service
  labels:
    app: server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: server
