k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: toggle-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - staging.markob.io
      secretName: secret-cert-toggle
  rules:
  - host: staging.markob.io
    http:
      paths:
      - backend:
          serviceName: expose-service
          servicePort: 80
