k8s/tlsingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    # specify the name of the global IP address resource to be associated with the HTTP(S) Load Balancer.
    kubernetes.io/ingress.global-static-ip-name: server-ip
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
        # controls whether the ingress is modified ‘in-place’,
    # or a new one is created specifically for the HTTP01 challenge.
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: server
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - staging.markob.io
    secretName: server-cert-secret # < cert-manager will store the created certificate in this secret
  rules:
  - host: staging.markob.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: expose-service
          servicePort: 8080
